--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Merges documents",
   "main": "src/document-merger.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha ./tests --recursive"
+    "test": "node ./node_modules/mocha/bin/mocha ./tests/**/index.js"
   },
   "repository": {
     "type": "git",
